--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 						<div class="overlay-holder">
 							<div data-w-id="f1652b05-c57c-5415-3dd8-17a27f83bfaf" style="-webkit-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="video-overlay"></div>
 						</div>
-						<div data-poster-url="/hEALTHHEADER.png" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="bg-video w-background-video w-background-video-atom" style="margin-right: -20px;">
-							<video id="2fc19edc-5e95-da23-244e-f856f384d0cb-video" autoplay="" loop="" style="background-image:url(&quot;/hEALTHHEADER.png&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-								<source src="/hEALTHHEADER.png" data-wf-ignore="true" />
-								<source src="/hEALTHHEADER.png" data-wf-ignore="true" />
+						<div data-poster-url="/HEALTHHEADER.png" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="bg-video w-background-video w-background-video-atom" style="margin-right: -20px;">
+							<video id="2fc19edc-5e95-da23-244e-f856f384d0cb-video" autoplay="" loop="" style="background-image:url(&quot;/HEALTHHEADER.png&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+								<source src="/HEALTHHEADER.png" data-wf-ignore="true" />
+								<source src="/HEALTHHEADER.png" data-wf-ignore="true" />
 							</video>
 						</div>
 						<div data-w-id="604e1af3-993b-04ef-7443-2e4e6d43d443" style="-webkit-transform:translate3d(0, 0, 0) scale3d(10, 10, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(10, 10, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(10, 10, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(10, 10, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="video-overlay-big"></div>
