--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<h3 class="jumbo discrupt" style="grid-column: 2/-1;text-align: center; margin: 0 auto; " >The greatest wealth is health</h3></div>
 				<div class="container relative z2">
 					
-					<div id="w-node-eef80e49-2d9f-1d65-8387-9ebae61e2696-cbb1d3a4" style="text-align: center; margin: 0 auto; background-color: white;">
+					<div id="w-node-eef80e49-2d9f-1d65-8387-9ebae61e2696-cbb1d3a4" style="text-align: center; margin: 0 auto;">
 						<p class="paragraph-xl text-black-animation" style="font-size: 23px; line-height: 35px;">"If you have health, you probably will be happy, and if you have health and happiness, you have all the wealth you need, even if it is not all you want." – Elbert Hubbard. </p> <br><br><br><br>
 					</div> 
 				</div>
